<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_sister"
            android:icon="@drawable/tree"
            android:title="@string/menu_sister" />
        <item
            android:id="@+id/nav_pro"
            android:icon="@drawable/profession"
            android:title="@string/menu_pro" />
        <item
            android:id="@+id/nav_triage"
            android:icon="@drawable/medical_assistant"
            android:title="@string/menu_triage" />
        <item
            android:id="@+id/nav_privacy"
            android:icon="@drawable/privacy"
            android:title="@string/menu_privacy" />
    </group>
</menu>
